# zote

./: .pre-commit-config.yaml  README.md  pyproject.toml
zote/agents/: millibelle.py  oblobbles.py
