[project]
name = "zote"
version = "0.1.0"
description = ""
authors = [
    {name = "MadaraUchiha-314",email = "rohithr31+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "langgraph (>=0.2.71,<0.3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.0"

